Change grammar to use string instead of valueExpression to pass unit tests